@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180822"
-#define public MagickPackageReleaseDate "snapshot-20180822"
+#define public MagickPackageVersionAddendum ".020180825"
+#define public MagickPackageReleaseDate "snapshot-20180825"
