@@ -1,7 +1,12 @@
+2018-08-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/nt_base.h (isnan): Try adding a MSVC replacement for
+	missing isnan() function.  Not yet tested.
+
 2018-08-25  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* coders/wpg.c This should fix intentional 64 bit file offset
-        overflow as depictedin OSS-fuzz-9936. Thanks to OSS-Fuzz.
+	overflow as depictedin OSS-fuzz-9936. Thanks to OSS-Fuzz.
 
 2018-08-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
